# ClashOfClans

./: .gitignore  readme.md
RakNet_PC-4.06/: CMakeLists.txt  RakNet_VS2008.sln  readme.txt
RakNet_PC-4.06/DependentExtensions/: RakVoice.h
RakNet_PC-4.06/DependentExtensions/Autopatcher/: AutopatcherClient.cpp  AutopatcherClient.h  AutopatcherServer.cpp
RakNet_PC-4.06/DependentExtensions/IrrlichtDemo/: CDemo.cpp  IrrlichtDemo.v8.vcxproj  IrrlichtDemo.v8.vcxproj.filters  RakNetStuff.cpp
RakNet_PC-4.06/DependentExtensions/Lobby2/: Lobby2Message.h  Lobby2Server.cpp
RakNet_PC-4.06/DependentExtensions/Marmalade/: RakNet.mkb  RakNet.mkf
RakNet_PC-4.06/DependentExtensions/Ogre3DInterpDemo/: Ogre3DInterpDemo.vcxproj  Ogre3DInterpDemo.vcxproj.filters
RakNet_PC-4.06/DependentExtensions/RPC3/: RPC3.h
RakNet_PC-4.06/DependentExtensions/SQLite3Plugin/: SQLite3Plugin.vcxproj  SQLite3Plugin.vcxproj.filters
RakNet_PC-4.06/DependentExtensions/Swig/: MakeSwig.bat
RakNet_PC-4.06/Lib/: CMakeLists.txt
RakNet_PC-4.06/Lib/DLL/: CMakeLists.txt  DLL_vc9.vcproj  DLL_vc9.vcxproj  DLL_vc9.vcxproj.filters
RakNet_PC-4.06/Lib/LibStatic/: CMakeLists.txt  LibStatic_vc9.vcproj  LibStatic_vc9.vcxproj  LibStatic_vc9.vcxproj.filters
RakNet_PC-4.06/Samples/: CMakeLists.txt
RakNet_PC-4.06/Samples/AutoPatcherServer_MySQL/: AutopatcherServer_MySQL.vcxproj  AutopatcherServer_MySQL.vcxproj.filters
RakNet_PC-4.06/Samples/AutopatcherClient/: AutopatcherClientTest.cpp  AutopatcherClient_vc9.vcxproj  AutopatcherClient_vc9.vcxproj.filters
RakNet_PC-4.06/Samples/AutopatcherClientGFx3.0/: AutopatcherClientGFx3.0_vc9.vcxproj  AutopatcherClientGFx3.0_vc9.vcxproj.filters
RakNet_PC-4.06/Samples/AutopatcherClientRestarter/: AutopatcherClientRestarter_vc9.vcxproj
RakNet_PC-4.06/Samples/AutopatcherServer/: AutopatcherServer_vc9.vcxproj  AutopatcherServer_vc9.vcxproj.filters
RakNet_PC-4.06/Samples/BigPacketTest/: BigPacketTest.cpp  BigPacketTest_vc9.vcxproj
RakNet_PC-4.06/Samples/BurstTest/: BurstTest_vc9.vcxproj  BurstTest_vc9.vcxproj.filters
RakNet_PC-4.06/Samples/Chat Example/: Chat Example Client_vc9.vcxproj  Chat Example Server.cpp  Chat Example Server_vc9.vcxproj
RakNet_PC-4.06/Samples/CloudClient/: CloudClient_vc9.vcxproj
RakNet_PC-4.06/Samples/CloudServer/: CloudServer_vc9.vcxproj
RakNet_PC-4.06/Samples/CloudTest/: CloudTest_vc9.vcxproj
RakNet_PC-4.06/Samples/CommandConsoleClient/: CommandConsoleClient_vc9.vcxproj
RakNet_PC-4.06/Samples/CommandConsoleServer/: CommandConsoleServer_vc9.vcxproj  main.cpp
RakNet_PC-4.06/Samples/ComprehensivePCGame/: ComprehensivePCGame.cpp  ComprehensivePCGame_vc9.vcproj  ComprehensivePCGame_vc9.vcxproj  ComprehensivePCGame_vc9.vcxproj.filters  readme.txt
RakNet_PC-4.06/Samples/ComprehensiveTest/: ComprehensiveTest_vc9.vcxproj
RakNet_PC-4.06/Samples/CrashReporter/: CrashReporter_vc9.vcxproj
RakNet_PC-4.06/Samples/CrossConnectionTest/: CrossConnectionTest_vc9.vcxproj
RakNet_PC-4.06/Samples/DirectoryDeltaTransfer/: DirectoryDeltaTransferTest.cpp  DirectoryDeltaTransfer_vc9.vcxproj
RakNet_PC-4.06/Samples/Dropped Connection Test/: DroppedConnectionTest_vc9.vcxproj
RakNet_PC-4.06/Samples/Encryption/: Encryption.cpp  Encryption_vc9.vcproj  Encryption_vc9.vcxproj
RakNet_PC-4.06/Samples/FCMHost/: FCM2Host.vcxproj  FCM2HostTest.cpp
RakNet_PC-4.06/Samples/FCMHostSimultaneous/: FCM2HostSimultaneous.vcxproj
RakNet_PC-4.06/Samples/FCMVerifiedJoinSimultaneous/: FCM2VerifiedJoinSimultaneous.vcproj  FCM2VerifiedJoinSimultaneous.vcxproj  FCM2VerifiedJoinSimultaneousTest.cpp
RakNet_PC-4.06/Samples/FileListTransfer/: FileListTransfer.vcxproj  main.cpp
RakNet_PC-4.06/Samples/Flow Control Test/: FlowControlTest_vc9.vcxproj
RakNet_PC-4.06/Samples/Fully Connected Mesh/: FullyConnectedMesh_vc9.vcxproj
RakNet_PC-4.06/Samples/LANServerDiscovery/: LANServerDiscovery_vc9.vcxproj
RakNet_PC-4.06/Samples/Lobby2Client/: Lobby2Client.vcxproj  Lobby2Client.vcxproj.filters
RakNet_PC-4.06/Samples/Lobby2ClientGFx3.0/: Lobby2ClientGFx3.0.vcxproj  Lobby2ClientGFx3.0.vcxproj.filters
RakNet_PC-4.06/Samples/Lobby2Server_PGSQL/: Lobby2Server_PGSQL.vcxproj  Lobby2Server_PGSQL.vcxproj.filters
RakNet_PC-4.06/Samples/LoopbackPerformanceTest/: LoopbackPerformanceTest_vc9.vcxproj
RakNet_PC-4.06/Samples/MessageFilter/: MessageFilter_vc9.vcxproj
RakNet_PC-4.06/Samples/MessageSizeTest/: MessageSizeTest_vc9.vcxproj
RakNet_PC-4.06/Samples/NATCompleteClient/: NATCompleteClient.vcproj  NATCompleteClient.vcxproj  NATCompleteClient.vcxproj.filters  main.cpp
RakNet_PC-4.06/Samples/NATCompleteServer/: NATCompleteServer.vcxproj  main.cpp
RakNet_PC-4.06/Samples/OfflineMessagesTest/: OfflineMessagesTest_vc9.vcxproj
RakNet_PC-4.06/Samples/PHPDirectoryServer2/: PHPDirectoryServer2.vcxproj  main.cpp
RakNet_PC-4.06/Samples/PacketLogger/: PacketLoggerTest_vc9.vcxproj
RakNet_PC-4.06/Samples/Ping/: Ping_vc9.vcxproj
RakNet_PC-4.06/Samples/RPC3/: RPC3.vcxproj  RPC3.vcxproj.filters
RakNet_PC-4.06/Samples/RPC4/: RPC4.vcxproj  RPC4.vcxproj.filters  RPC4Sample.cpp
RakNet_PC-4.06/Samples/RackspaceConsole/: RackspaceConsole_vc9.vcxproj
RakNet_PC-4.06/Samples/RakVoice/: RakVoice_vc9.vcxproj  RakVoice_vc9.vcxproj.filters
RakNet_PC-4.06/Samples/RakVoiceDSound/: RakVoiceDSound_vc9.vcxproj  RakVoiceDSound_vc9.vcxproj.filters
RakNet_PC-4.06/Samples/RakVoiceFMOD/: FMODVoiceAdapter.h  RakVoiceFMOD_vc9.vcproj  RakVoiceFMOD_vc9.vcxproj  main.cpp  (+1 more)
RakNet_PC-4.06/Source/: CCRakNetUDT.h  CloudServer.cpp  DynDNS.h  FT_ConnectProcess.cpp  FT_ConnectProcess.h  FT_DataStruct.cpp  FT_DataStruct.h  MessageIdentifiers.h  NatPunchthroughClient.h  NatTypeDetectionCommon.cpp  NativeFeatureIncludes.h  PacketOutputWindowLogger.cpp  PacketizedTCP.cpp  PluginInterface2.cpp  PluginInterface2.h  RPC4Plugin.cpp  RakNetDefines.h  RakNetSocket.cpp  RakNetSocket.h  RakNetTypes.h  RakPeer.h  RakString.cpp  RakString.h  RakWString.cpp  ReadyEvent.cpp  ReadyEvent.h  ReliabilityLayer.h  Router2.cpp  SocketDefines.h  SocketIncludes.h  SocketLayer.cpp  SocketLayer.h  TeamManager.cpp  UDPForwarder.h
(+456 files in other folders)
