cmake_minimum_required(VERSION 2.6)

add_subdirectory("AutopatcherClient")
#add_subdirectory("AutopatcherClientGFx3.0")
add_subdirectory("AutopatcherClientRestarter")
add_subdirectory("AutopatcherServer")
add_subdirectory("AutoPatcherServer_MySQL")
add_subdirectory("BigPacketTest")
add_subdirectory("BurstTest")
add_subdirectory("Chat Example")
add_subdirectory("CloudClient")
add_subdirectory("CloudServer")
add_subdirectory("CloudTest")
add_subdirectory("CommandConsoleClient")
add_subdirectory("CommandConsoleServer")
add_subdirectory("ComprehensivePCGame")
add_subdirectory("ComprehensiveTest")
#add_subdirectory("CrashRelauncher")
add_subdirectory("CrashReporter")
add_subdirectory("CrossConnectionTest")
add_subdirectory("DirectoryDeltaTransfer")
add_subdirectory("Dropped Connection Test")
add_subdirectory("Encryption")
add_subdirectory("FCMHost")
add_subdirectory("FCMHostSimultaneous")
add_subdirectory("FCMVerifiedJoinSimultaneous")
add_subdirectory("FileListTransfer")
add_subdirectory("Flow Control Test")
add_subdirectory("Fully Connected Mesh")
#add_subdirectory("GFWL")
#add_subdirectory("iOS")
add_subdirectory("LANServerDiscovery")
add_subdirectory("Lobby2Client")
#add_subdirectory("Lobby2ClientGFx3.0")
#add_subdirectory("Lobby2Client_PS3")
#add_subdirectory("Lobby2Server_PGSQL")
#add_subdirectory("LobbyDB_PostgreSQL")
#add_subdirectory("LoopbackPerformanceTest")
#add_subdirectory("Marmalade")
add_subdirectory("MasterServer")
add_subdirectory("MessageFilter")
add_subdirectory("MessageSizeTest")
add_subdirectory("NATCompleteClient")
add_subdirectory("NATCompleteServer")
add_subdirectory("OfflineMessagesTest")
add_subdirectory("PacketLogger")
add_subdirectory("PHPDirectoryServer2")
add_subdirectory("Ping")
#add_subdirectory("PS3")
add_subdirectory("RackspaceConsole")
add_subdirectory("RakVoice")
add_subdirectory("RakVoiceDSound")
add_subdirectory("RakVoiceFMOD")
#add_subdirectory("RakVoiceFMODAsDLL")
#add_subdirectory("RankingServerDB")
#add_subdirectory("RankingServerDBTest")
#add_subdirectory("ReadyEvent")
add_subdirectory("Reliable Ordered Test")
add_subdirectory("ReplicaManager3")
#add_subdirectory("Rooms")
#add_subdirectory("RoomsBrowserGFx3")
add_subdirectory("Router2")
add_subdirectory("RPC3")
add_subdirectory("RPC4")
add_subdirectory("SendEmail")
add_subdirectory("ServerClientTest2")
add_subdirectory("StatisticsHistoryTest")
#add_subdirectory("SteamLobby")
add_subdirectory("TeamManager")
add_subdirectory("TestDLL")
add_subdirectory("Tests")
add_subdirectory("ThreadTest")
add_subdirectory("Timestamping")
add_subdirectory("TitleValidationDB_PostgreSQL")
add_subdirectory("TwoWayAuthentication")
add_subdirectory("UDPForwarder")
#add_subdirectory("Vita")
#add_subdirectory("XBOX360")